--- a/actividades.ipynb
+++ b/actividades.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "[10000 rows x 27 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
        "[9478 rows x 12 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,10 +734,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.47939399, -0.41376027,  0.02857942, ..., -0.82729495,\n",
+       "        -0.84060439, -0.71671768],\n",
+       "       [-0.27713576, -0.398636  ,  1.15773891, ...,  0.42283594,\n",
+       "         0.90800534,  1.09729821],\n",
+       "       [-0.53122392, -0.41376027, -0.59440513, ..., -0.91063701,\n",
+       "        -0.84060439, -0.80741847],\n",
+       "       ...,\n",
+       "       [ 1.41239812,  1.28183543, -0.36078593, ..., -0.03554539,\n",
+       "        -0.04578178,  0.37169186],\n",
+       "       [-0.03883967, -0.41376027,  1.04092931, ..., -0.41058466,\n",
+       "        -0.84060439, -0.98882006],\n",
+       "       [-0.47908822, -0.41213124, -0.32184939, ..., -0.91063701,\n",
+       "        -0.68163987, -0.89811927]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Since the dataset might be too large for computational resources, a sample of 1000 rows is taken for processing.\n",
+    "dfArray = np.array(df.sample(1000))\n",
+    "\n",
+    "# Data normalization\n",
+    "# Scale the data to have zero mean and unit variance along each feature.\n",
+    "# This step is crucial for clustering algorithms as it ensures that each feature contributes equally to the distance calculations.\n",
+    "df_scale = sklearn.preprocessing.scale(dfArray)\n",
+    "df_scale"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "2. Analice la tendencia al agrupamiento usando el estadístico de Hopkings y la VAT (Visual Assessment of cluster Tendency). Discuta sus resultados e impresiones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Hopkins Value is 0.096, indicating a strong tendency for clustering.\n",
+      "Clustering is worthwhile.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the Hopkins statistic to assess the clustering tendency of the data.\n",
+    "hopkinsValue = pyclustertend.hopkins(df_scale, len(df_scale))\n",
+    "\n",
+    "# Determine if clustering is worthwhile based on the Hopkins statistic.\n",
+    "if hopkinsValue < 0.5:\n",
+    "    print(f\"The Hopkins Value is {hopkinsValue:.3f}, indicating a strong tendency for clustering.\")\n",
+    "    print(\"Clustering is worthwhile.\")\n",
+    "else:\n",
+    "    print(f\"The Hopkins Value is {hopkinsValue:.3f}, indicating little clustering tendency.\")\n",
+    "    print(\"Clustering may not be meaningful for this dataset.\")"
    ]
   },
   {
