feat: Agglomerative Clustering Analysis

--- a/actividades.ipynb
+++ b/actividades.ipynb
@@ -1122,6 +1122,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Analyzing Budget and Revenue Through Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(df_scale[moviesHC == 0, 0], df_scale[moviesHC == 0, 1],s=100,c='#76c893', label = \"Cluster 1\")\n",
+    "plt.scatter(df_scale[moviesHC == 1, 0], df_scale[moviesHC == 1, 1],s=100,c='#1a759f', label = \"Cluster 2\")\n",
+    "plt.scatter(kMean.cluster_centers_[:,0],kMean.cluster_centers_[:,1], s=300, c=\"#d9ed92\",marker=\"*\", label=\"Centroides\")\n",
+    "\n",
+    "plt.title(\"Movie Clusters Based On Budget-Revenue\")\n",
+    "plt.xlabel(\"Budget\")\n",
+    "plt.ylabel(\"Revenue\")\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyzing Runtime and Popularity Through Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(df_scale[moviesHC == 0, 0], df_scale[moviesHC == 0, 1],s=100,c='#76c893', label = \"Cluster 1\")\n",
+    "plt.scatter(df_scale[moviesHC == 1, 0], df_scale[moviesHC == 1, 1],s=100,c='#1a759f', label = \"Cluster 2\")\n",
+    "plt.scatter(kMean.cluster_centers_[:,2],kMean.cluster_centers_[:,3], s=300, c=\"#d9ed92\",marker=\"*\", label=\"Centroides\")\n",
+    "\n",
+    "plt.title(\"Movie Clusters Based On Runtime-Popularity\")\n",
+    "plt.xlabel(\"Runtime\")\n",
+    "plt.ylabel(\"Popularity\")\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyzing Popularity and Production Countries Amount Through Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(df_scale[moviesHC == 0, 0], df_scale[moviesHC == 0, 1],s=100,c='#76c893', label = \"Cluster 1\")\n",
+    "plt.scatter(df_scale[moviesHC == 1, 0], df_scale[moviesHC == 1, 1],s=100,c='#1a759f', label = \"Cluster 2\")\n",
+    "plt.scatter(kMean.cluster_centers_[:,3],kMean.cluster_centers_[:,8], s=300, c=\"#d9ed92\",marker=\"*\", label=\"Centroides\")\n",
+    "\n",
+    "plt.title(\"Movie Clusters Based On Popularity-Prod. Countries Amount\")\n",
+    "plt.xlabel(\"Popularity\")\n",
+    "plt.ylabel(\"Prod. Countries Amount\")\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5. Determine la calidad del agrupamiento hecho por cada algoritmo con el método de la silueta. Discuta los resultados."
    ]
   },
