fix: Silhouette Method Comparisons

--- a/actividades.ipynb
+++ b/actividades.ipynb
@@ -1251,34 +1251,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For n_clusters = 2 The average silhouette_score is : 0.3418845088021195\n",
-      "For n_clusters = 3 The average silhouette_score is : 0.23240010856309362\n",
-      "For n_clusters = 4 The average silhouette_score is : 0.2120744748359204\n"
+      "KMeans\n",
+      "\n",
+      "For n_clusters = 4 The average silhouette_score is : 0.3418845088021195\n",
+      "Hierarchical Clustering\n",
+      "\n",
+      "For n_clusters = 4 The average silhouette_score is : 0.3987790227558332\n"
      ]
     }
    ],
    "source": [
-    "rangeN = [2, 3, 4]\n",
+    "n_clusters = 2\n",
     "\n",
-    "for n_clusters in rangeN:\n",
+    "print(\"KMeans\\n\")\n",
+    "clusterer = KMeans(n_clusters=2, random_state=10)\n",
+    "cluster_labels = clusterer.fit_predict(df_scale)\n",
     "\n",
-    "    clusterer = KMeans(n_clusters=n_clusters, random_state=10)\n",
-    "    cluster_labels = clusterer.fit_predict(df_scale)\n",
+    "silhouette_avg = silhouette_score(df_scale, cluster_labels)\n",
+    "print(\n",
+    "    \"For n_clusters =\",\n",
+    "    n_clusters,\n",
+    "    \"The average silhouette_score is :\",\n",
+    "    silhouette_avg,\n",
+    ")\n",
     "\n",
-    "    silhouette_avg = silhouette_score(df_scale, cluster_labels)\n",
-    "    print(\n",
-    "        \"For n_clusters =\",\n",
-    "        n_clusters,\n",
-    "        \"The average silhouette_score is :\",\n",
-    "        silhouette_avg,\n",
-    "    )"
+    "print(\"\\nHierarchical Clustering\\n\")\n",
+    "hc = AgglomerativeClustering(n_clusters=2,linkage='ward')\n",
+    "moviesHC = hc.fit_predict(df_scale)\n",
+    "\n",
+    "silhouette_avg = silhouette_score(df_scale, moviesHC)\n",
+    "print(\n",
+    "    \"For n_clusters =\",\n",
+    "    n_clusters,\n",
+    "    \"The average silhouette_score is :\",\n",
+    "    silhouette_avg,\n",
+    ")"
    ]
   },
   {
