--- a/actividades.ipynb
+++ b/actividades.ipynb
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1260,10 +1260,11 @@
      "text": [
       "KMeans\n",
       "\n",
-      "For n_clusters = 4 The average silhouette_score is : 0.3418845088021195\n",
+      "For n_clusters = 2 The average silhouette_score is : 0.3418845088021195\n",
+      "\n",
       "Hierarchical Clustering\n",
       "\n",
-      "For n_clusters = 4 The average silhouette_score is : 0.3987790227558332\n"
+      "For n_clusters = 2 The average silhouette_score is : 0.3987790227558332\n"
      ]
     }
    ],
@@ -1299,7 +1300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se puede observar claramente en los resultados que el valor más cercano a 1 se obtiene cuando n_clusters=2. Esto sugiere que esta configuración proporciona la separación más óptima entre los datos. "
+    "Se puede observar claramente en los resultados que el valor más cercano a 1 con n_clusters=2 es con el agrupamiento jerárquico. Esto sugiere que esta configuración proporciona la separación más óptima entre los datos. A pesar de esto, la diferencia entre KMeans y HC no es muy grande, por lo que ambos métodos son viables para este conjunto de datos."
    ]
   },
   {
